--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,7 +1,3 @@
-$background-body: black;
-$background-button: rgb(91, 213, 235);
-$bg-button-hover: red;
-$bs-button-hover: rgba(255, 192, 203, 0.657);
-$h1: white;
-$text: gray;
-$primary: white;
+$bg-color-hover:rgb(227, 197, 228);
+$border-color: rgb(136, 136, 136);
+$text: rgb(87, 86, 86);
